<resources>
    <string name="app_name">CalculadoraIMC</string>
    <string name="email">Email</string>
    <string name="contrase_a">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="recordar_contrase_a">Recordar Contraseña</string>
    <string name="email2">Email</string>
    <string name="ingresar_nombre">Ingresar Nombre</string>
    <string name="registrar">Registrar</string>
    <string name="calculadora_imc">Calculadora IMC</string>
    <string name="todo">TODO</string>
    <string name="ingrese_los_datos">Ingrese Los datos:</string>
    <string name="peso">Peso</string>
    <string name="_84">84</string>
    <string name="en_kilogramos">* en Kilogramos</string>
    <string name="altura">Altura</string>
    <string name="_184">184</string>
    <string name="en_centimetros">* en centimetros</string>
    <string name="calcular">Calcular</string>
    <string name="resultado">Resultado:</string>
    <string name="su_imc_es_17_4_lo_que_indica_que_su_peso_esta_en_la_categor_a_de_bajo_peso_para_adultos_de_su_estatura"><![CDATA[Su IMC es 17.4, lo que indica que su peso esta en la categoría de Bajo peso para adultos de su estatura.]]></string>
    <string name="guardar">Guardar</string>
    <string name="ver_historial">Ver Historial</string>
    <string name="tabla_de_referencias">Tabla de referencias:</string>
    <string name="rango_de_imc">Rango de IMC</string>
    <string name="clasificaci_n">Clasificación</string>
    <string name="_16_5_kg_m2"><![CDATA[< 16.5 kg/m2]]></string>
    <string name="bajo_peso_severo">Bajo peso severo</string>
    <string name="_16_5_18_5_kg_m2"><![CDATA[≥ 16.5 - < 18.5 kg/m2]]></string>
    <string name="bajo_peso">Bajo peso</string>
    <string name="_18_5_25_kg_m2"><![CDATA[≥ 18.5 - < 25 kg/m2]]></string>
    <string name="peso_normal">Peso normal</string>
    <string name="_25_30_kg_m2"><![CDATA[≥ 25 - < 30 kg/m2]]></string>
    <string name="sobre_peso">Sobre peso</string>
    <string name="_30_35_kg_m2"><![CDATA[≥ 30 - < 35 kg/m2]]></string>
    <string name="obesidad_tipo_1">Obesidad tipo 1</string>
    <string name="_35_40_kg_m2"><![CDATA[≥ 35 - 40 < kg/m2]]></string>
    <string name="obesidad_tipo_2">Obesidad tipo 2</string>
    <string name="imc">IMC</string>
    <string name="escala">Escala</string>
    <string name="acci_n">Acción</string>
    <string name="_80_kg">80 kg</string>
    <string name="_184_cm">184 cm</string>
    <string name="_13_6">13,6</string>
    <string name="bajo">Bajo</string>
    <string name="volver">Volver</string>
    <string name="logo_imc">logo_imc</string>
    <string name="no_tienes_cuenta_registrate">No tienes cuenta? Registrate</string>
    <string name="nombre">Nombre</string>
</resources>